--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="build.js"></script>
-    <title>Webpack Lessons from Ilya Kantor</title>
+    <title>Webpack Lessons by Ilya Kantor</title>
 </head>
 <body>
 
